--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2 id="text">HELLOO BEE</h2>
             <img src="mountains_front.png"id="mountains_front">
         </section>
-        <div class="sec" 
+        <div class="sec">
              <h2>Happy Birthday Sayang!</h2>
              <p> Selamat tanggal 24 ya sayaang, semua doa dan harapan yang terbaik buat kamu aamiin. Gimana gimana seru gak ulang tahunnya??
                  semoga seru yaa. Oiya semoga waktu kamu lagi baca ini semuanya udah selesai yaa, abis itu tinggal istirahat deh kamu. Tapi sebelum bobo kita cerita dulu bentar yaa?
