--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Safa Birthday Webpage</title>
+    <title>parallax</title>
     <body>
         <header>
             <ul</ul>
@@ -22,11 +22,11 @@
              <p> Selamat tanggal 24 ya sayaang, semua doa dan harapan yang terbaik buat kamu aamiin. Gimana gimana seru gak ulang tahunnya??
                  semoga seru yaa. Oiya semoga waktu kamu lagi baca ini semuanya udah selesai yaa, abis itu tinggal istirahat deh kamu. Tapi sebelum bobo kita cerita dulu bentar yaa?
                  kayaknya kalau nanti aku diwawancara apasih hobi baru aku, aku jawabnya mau cerita sama kamu sebelum istirahat wkwk. 
-                 <br><br> Oiya maaf banget kemaren kemaren aku terpaksa banget nanya macem macem terus bilangnya buat tugas padahal sebenernya buat ini hehe, aku pengen mastiin aja apa apa yang kamu suka sampe 
+                 <br><br> Oiya maaf banget kemaren kemaren aku terpaksa banget boong nanya macem macem terus bilangnya buat tugas padahal sebenernya buat ini hehe, aku pengen mastiin aja apa apa yang kamu suka sampe 
                 color pallete dari kotaknya aja aku pastiin dulu wkwkw maaf yaa. Ini buat satu tahun terakhir yaa, terima sama simpen kadonya okaay? This is not much but i hope you like it luvv.
-                <br><br> Happy anniversary juga yaa hehe. Gimana ni kesan pesannya? awas aja kalau jawabnya pake jawaban template seru dan insightful ya sialan. Disamping berantem berantemnya terutama bulan kemaren
-                aku seneng banget selama ini sama kamu. Makasi banyak ya buat semuanya. Semoga gak capek kamuu. Pokoknya no matter where the path leads us, semoga kita bisa bareng terus sampe nanti yang paling nanti.
-                <br><br> Thanks for always being my safe place, my partner, my best friend, my sister, and my favorite enemy hehe. I love you so much and i hope i get to say it each and every day. 
+                <br><br> Happy anniversary juga yaa hehe. Ada yang berubah gak kesan pesannya? awas aja kalau jawabnya masih pake jawaban template seru dan insightful ya sialan. Disamping berantem berantemnya terutama bulan kemaren,
+                aku seneng banget selama ini sama kamu. Makasi banyak ya buat semuanya. Semoga kamu gak capek. Pokoknya no matter where the path leads us, semoga kita bisa bareng terus sampe nanti yang paling nanti. Terus yang penting bukan cuma bareng doang, tapi juga bisa sama sama berkembang sama belajar bareng terus. 
+                <br><br> Udah dulu ya bee ini udah malem udah ada yang ngajakin bobo ni sorry. Sekian dari saya Rangga Wira Satya Dharma perwakilan dari kelompok 1 saya ucapkan terimakasih banyak atas perhatiannya. Last but not least, I'd like to thank you for always being my safe place, my partner, my best friend, my sister, and my favorite enemy hehe. I love you so much bee, and i hope i get to say it each and every day.
                  <br><br><br><audio  controls autoplay="autoplay">
                     <source src="bgmusic.mp3" type="audio/mpeg"/>
                      </audio> </p>
@@ -34,20 +34,20 @@
         </section>          
     </body>
     <script>
-        let stars = document.getElementById('stars')
-        let moon = document.getElementById('moon')
-        let mountains_behind = document.getElementById('mountains_behind')
-        let text = document.getElementById('text')
-        let btn = document.getElementById('btn')
-        let mountains_front = document.getElementById('mountains_front');
-        
-        window.addEventListener('scroll', function(){
-            let value = window.scrollY;
-            stars.style.left = value * 0.25 + 'px';
-            moon.style.top = value * 0.25 + 'px';
-            mountains_behind.style.top = value * 0.4 + 'px';
-            mountains_front.style.top = value * 0 + 'px';
-            text.style.marginRight = value * 3 + 'px';
-        })
-    </script>
-    </html>
+            let stars = document.getElementById('stars')
+            let moon = document.getElementById('moon')
+            let mountains_behind = document.getElementById('mountains_behind')
+            let text = document.getElementById('text')
+            let btn = document.getElementById('btn')
+            let mountains_front = document.getElementById('mountains_front');
+            
+            window.addEventListener('scroll', function(){
+                let value = window.scrollY;
+                stars.style.left = value * 0.25 + 'px';
+                moon.style.top = value * 0.25 + 'px';
+                mountains_behind.style.top = value * 0.4 + 'px';
+                mountains_front.style.top = value * 0 + 'px';
+                text.style.marginRight = value * 3 + 'px';
+            })
+        </script>
+        </html>
