--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>parallax</title>
+    <title>Safa Birthday Webpage</title>
     <body>
         <header>
             <ul</ul>
@@ -19,10 +19,10 @@
         </section>
         <div class="sec">
              <h2>Happy Birthday Sayang!</h2>
-             <p> Selamat tanggal 24 ya sayaang, semua doa dan harapan yang terbaik buat kamu aamiin. Gimana gimana seru gak ulang tahunnya??
-                 semoga seru yaa. Oiya semoga waktu kamu lagi baca ini semuanya udah selesai yaa, abis itu tinggal istirahat deh kamu. Tapi sebelum bobo kita cerita dulu bentar yaa?
-                 kayaknya kalau nanti aku diwawancara apasih hobi baru aku, aku jawabnya mau cerita sama kamu sebelum istirahat wkwk. 
-                 <br><br> Oiya maaf banget kemaren kemaren aku terpaksa banget boong nanya macem macem terus bilangnya buat tugas padahal sebenernya buat ini hehe, aku pengen mastiin aja apa apa yang kamu suka sampe 
+             <p> Selamat tanggal 24 ya sayaang, semua doa dan harapan yang terbaik buat kamu aamiin. Gimana nih rasanya nambah tua??
+                 Semoga tanggal 24 nya seru yaa. Buka dong ini kadonya terus abis itu sebelum bobo kita cerita dulu bentar yaa? FYI aja nih
+                kayaknya kalau nanti aku diwawancara apasih hobi baru aku, aku jawabnya mau cerita sama kamu sebelum istirahat wkwk. 
+                 <br><br> Oiya confession dulu, maaf banget kemaren kemaren aku terpaksa banget boong nanya macem macem terus bilangnya buat tugas padahal sebenernya buat ini hehe, aku pengen mastiin aja apa apa yang kamu suka sampe 
                 color pallete dari kotaknya aja aku pastiin dulu wkwkw maaf yaa. Ini buat satu tahun terakhir yaa, terima sama simpen kadonya okaay? This is not much but i hope you like it luvv.
                 <br><br> Happy anniversary juga yaa hehe. Ada yang berubah gak kesan pesannya? awas aja kalau jawabnya masih pake jawaban template seru dan insightful ya sialan. Disamping berantem berantemnya terutama bulan kemaren,
                 aku seneng banget selama ini sama kamu. Makasi banyak ya buat semuanya. Semoga kamu gak capek. Pokoknya no matter where the path leads us, semoga kita bisa bareng terus sampe nanti yang paling nanti. Terus yang penting bukan cuma bareng doang, tapi juga bisa sama sama berkembang sama belajar bareng terus. 
